welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but identifier found.
if !estFaceMur { avance }; 
   ^Program:2: error: illegal start of simple expression
if !estFaceMur { avance }; 
                         ^